# pyproject.toml  (root)
[project]
name = "rag-engine"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "packages/rag-core",
    "packages/eval",
    "apps/api",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["packages/rag-core/tests", "packages/eval/tests", "apps/api/tests"]
asyncio_mode = "auto"